--- a/servicos.html
+++ b/servicos.html
@@ -35,7 +35,7 @@
                 
                 <p class="title">Meus serviços</p>
             
-                <p>* trabalho profissionalmente como produtc owner/manager e possuo familiaridade com os frameworks scrum e kanban</p>
+                <p>* trabalho profissionalmente como produtc owner/manager e possuo familiaridade com os frameworks <strong>scrum e kanban</strong></p>
                 <p>* realizo consultorias para startups</p>
                 <p>* ministro aulas e workshops sobre assuntos referentes à gestão da inovação</p>
                 <p>* faço freela de python e web</p>
